--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "scripting",
+      "unlimitedStorage",
+      "storage"
     ]
   }
 }
