--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -17,7 +17,8 @@
     "@trpc/server": "^10.9.0",
     "plasmo": "0.64.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "daisyui": "^2.52.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
