--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -15,10 +15,10 @@
     "@trpc/client": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "daisyui": "^2.52.0",
     "plasmo": "0.64.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "daisyui": "^2.52.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
@@ -26,6 +26,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "prettier": "2.8.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.4"
   },
   "manifest": {
