--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -25,6 +25,8 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "prettier": "2.8.3",
     "tailwindcss": "^3.3.2",
     "typescript": "4.9.4"
