--- a/apps/chrome/tsconfig.json
+++ b/apps/chrome/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "extends": "plasmo/templates/tsconfig.base",
   "exclude": ["node_modules"],
-  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
+  "include": [
+    ".plasmo/index.d.ts",
+    "./**/*.ts",
+    "./**/*.tsx",
+    "tailwind.config.js"
+, "postcss.config.js"  ],
   "compilerOptions": {
     "paths": {
       "~*": ["./*"]
