--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -9,12 +9,8 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "@acme/api": "*",
-    "@plasmohq/storage": "^1.0.1",
-    "@tanstack/react-query": "^4.23.0",
-    "@trpc/client": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
+    "@acme/api": "^0.1.0",
+    "@plasmohq/storage": "^1.6.2",
     "daisyui": "^2.52.0",
     "plasmo": "0.64.4",
     "react": "18.2.0",
