Moved increments to the lot model. Plus with some helper function for initialisation

--- a/packages/config/increments/package.json
+++ b/packages/config/increments/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@acme/interval",
+  "name": "@acme/increments",
   "version": "0.1.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {}
