--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
+    "@acme/increments": "^0.1.0",
     "@trpc/client": "^10.32.0",
     "@trpc/server": "^10.32.0",
     "superjson": "1.9.1",
