--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -33,6 +33,7 @@
     "@acme/eslint-config": "^0.1.0",
     "@acme/tailwind-config": "^0.1.0",
     "@acme/types": "^0.1.0",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "@types/node": "^18.16.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
