--- a/packages/config/increments/package.json
+++ b/packages/config/increments/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "^5.1.6"
+  },
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc -w"
+  }
 }
