--- a/apps/chrome/tsconfig.json
+++ b/apps/chrome/tsconfig.json
@@ -32,7 +32,7 @@
     "preserveWatchOutput": true,
     "jsx": "preserve",
     "paths": {
-      "~*": ["./*"]
+      "~*": ["./src/*"]
     },
     "baseUrl": "."
   }
