--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@acme/api": "^0.1.0",
+    "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.6.2",
     "daisyui": "^2.52.0",
     "plasmo": "0.64.4",
