--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -15,7 +15,8 @@
     "daisyui": "^2.52.0",
     "plasmo": "0.64.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/chrome": "0.0.210",
