--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@acme/api": "^0.1.0",
-    "@plasmohq/messaging": "^0.5.0",
+    "@plasmohq/redux-persist": "^6.1.0",
     "@plasmohq/storage": "^1.6.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "daisyui": "^2.52.0",
     "plasmo": "0.64.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
+    "redux-persist-webextension-storage": "^1.0.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
