--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "redux-persist-webextension-storage": "^1.0.2",
+    "redux-thunk": "^2.4.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
