Got State in the console working. Plus added picture to the codebase.

--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@acme/chrome",
-  "displayName": "Chrome ext",
+  "displayName": "GavelConnect",
   "version": "0.0.1",
-  "description": "A basic Plasmo extension.",
+  "description": "GavelConnect description",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
