converted observeElementContent to it's own package

--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@acme/api": "^0.1.0",
+    "@acme/element-observer": "^0.1.0",
     "@plasmohq/redux-persist": "^6.1.0",
     "@plasmohq/storage": "^1.6.2",
     "@reduxjs/toolkit": "^1.9.5",
