Converted element-observer to element operations. This package handles element operations that I need to perform

--- a/packages/element-operations/package.json
+++ b/packages/element-operations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/element-observer",
+  "name": "@acme/element-operations",
   "version": "0.1.0",
   "main": "src/index.ts",
   "license": "MIT",
