Fixed issue where it would try to compare hammer price with null. Added case to prevent this

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,5 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "cSpell.words": ["extrabold"]
+  "cSpell.words": ["easylive", "extrabold"]
 }
