--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -9,12 +9,12 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "@acme/api": "^0.1.0",
     "@acme/element-operations": "^0.1.0",
     "@acme/increments": "^0.1.0",
     "@plasmohq/redux-persist": "^6.1.0",
-    "@plasmohq/storage": "^1.8.0",
+    "@plasmohq/storage": "^1.8.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "clsx": "^2.0.0",
     "daisyui": "^2.52.0",
     "plasmo": "0.81.0",
     "react": "18.2.0",
@@ -22,7 +22,8 @@
     "react-redux": "^8.1.3",
     "redux-persist-webextension-storage": "^1.0.2",
     "redux-thunk": "^2.4.2",
-    "zod": "^3.21.4"
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@acme/tailwind-config": "^0.1.0",
@@ -30,8 +31,8 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.26",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "prettier": "2.8.3",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.4"
