--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
+  "typescript.tsserver.experimental.enableProjectDiagnostics": true,
   "cSpell.words": ["easylive", "extrabold"]
 }
