--- a/apps/chrome/tsconfig.json
+++ b/apps/chrome/tsconfig.json
@@ -7,7 +7,8 @@
     "./src/**/*.ts",
     "./src/**/*.tsx",
     "tailwind.config.ts",
-    "postcss.config.js"
+    "postcss.config.js",
+    "src/slices/storageDecoder.js"
   ],
   "compilerOptions": {
     "strict": true,
