--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@acme/tailwind-config": "^0.1.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.0.0",
     "plasmo": "0.83.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
