updated packages + I added jest to chrome package

--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,10 @@
     },
     "lint": {},
     "lint:fix": {},
+    "test": {
+      "dependsOn": ["^db:generate"],
+      "cache": false
+    },
     "clean": {
       "cache": false
     },
