--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "test": "jest"
   },
   "dependencies": {
     "@acme/element-operations": "^0.1.0",
     "@acme/increments": "^0.1.0",
     "@plasmohq/redux-persist": "^6.1.0",
-    "@plasmohq/storage": "^1.8.1",
+    "@plasmohq/storage": "^1.9.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/jest": "^29.5.8",
     "clsx": "^2.0.0",
     "daisyui": "^2.52.0",
     "plasmo": "0.83.0",
@@ -32,6 +34,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.16",
+    "jest": "^29.7.0",
     "postcss": "^8.4.31",
     "prettier": "2.8.3",
     "tailwindcss": "^3.3.5",
@@ -51,11 +54,6 @@
       "matches": [
         "http://localhost:3000/*"
       ]
-    }
-  },
-  "pnpm": {
-    "overrides": {
-      "got@<11.8.5": ">=11.8.5"
     }
   }
 }
