--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
     "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix && manypkg fix",
+    "test": "turbo test",
     "type-check": "turbo type-check"
   },
   "dependencies": {
@@ -23,10 +24,15 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@manypkg/cli": "^0.20.0",
     "@types/prettier": "^2.7.3",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "turbo": "^1.10.15",
+    "turbo": "^1.10.16",
     "typescript": "^5.2.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "got@<11.8.5": ">=11.8.5"
+    }
   }
 }
