--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/preact": "^3.0.1",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^6.0.2",
     "astro": "^4.0.4",
     "preact": "^10.19.3",
     "tailwindcss": "^3.3.6"
