--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,10 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode",
+    "editor.formatOnSave": true
+  },
   "typescript.tsserver.experimental.enableProjectDiagnostics": true,
   "cSpell.words": ["easylive", "extrabold"]
 }
