--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^6.0.2",
     "astro": "^4.0.4",
+    "astro-seo": "^0.8.0",
     "preact": "^10.19.3",
     "tailwindcss": "^3.3.6"
   }
