--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Next.js",
+      "name": "Astro",
       "type": "node-terminal",
       "request": "launch",
       "command": "pnpm dev",
