--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -32,9 +32,9 @@
     "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "prettier": "2.8.8",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "4.9.4"
+    "typescript": "^5.3.2"
   },
   "manifest": {
     "host_permissions": [
