--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "engines": {
     "node": ">=v18.16.0"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/element-operations",
+    "packages/config/*"
+  ],
   "packageManager": "pnpm@8.10.5",
   "scripts": {
     "build": "turbo build",
