--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@acme/element-operations": "^0.1.0",
     "@acme/increments": "^0.1.0",
+    "@fontsource-variable/inter": "^5.0.16",
     "@plasmohq/redux-persist": "^6.1.0",
     "@plasmohq/storage": "^1.9.0",
     "@reduxjs/toolkit": "^1.9.7",
