--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -10,12 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.3.4",
     "@astrojs/preact": "^3.0.1",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^6.0.2",
     "astro": "^4.0.4",
     "astro-seo": "^0.8.0",
     "preact": "^10.19.3",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.0"
   }
 }
