--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.3.4",
     "@astrojs/preact": "^3.0.2",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.1",
