--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "create-t3-turbo",
   "private": true,
   "engines": {
-    "node": ">=v18.16.0"
+    "node": ">=20.10.0"
   },
   "workspaces": [
     "apps/*",
     "packages/element-operations",
     "packages/config/*"
   ],
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@8.13.1",
   "scripts": {
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
@@ -29,11 +29,11 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@manypkg/cli": "^0.21.1",
     "@types/prettier": "^2.7.3",
-    "eslint": "^8.54.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.8",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "turbo": "^1.11.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   },
   "pnpm": {
     "overrides": {
