--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.0.8",
     "astro-seo": "^0.8.0",
     "preact": "^10.19.3",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
