--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "workspaces": [
     "apps/*",
     "packages/element-operations",
+    "packages/react",
     "packages/config/*"
   ],
   "packageManager": "pnpm@8.13.1",
