--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
+    "tailwindcss": "^3.4.0",
     "turbo": "^1.11.2",
     "typescript": "^5.3.3"
   },
