--- a/packages/config/increments/package.json
+++ b/packages/config/increments/package.json
@@ -2,12 +2,19 @@
   "name": "@acme/increments",
   "version": "0.1.0",
   "main": "src/index.ts",
+  "type": "module",
   "license": "MIT",
   "devDependencies": {
+    "@acme/eslint-config": "^0.1.0",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "jest"
   }
 }
