--- a/apps/chrome/package.json
+++ b/apps/chrome/package.json
@@ -12,6 +12,7 @@
     "@acme/element-operations": "^0.1.0",
     "@acme/increments": "^0.1.0",
     "@fontsource-variable/inter": "^5.0.16",
+    "@formkit/auto-animate": "^0.8.1",
     "@plasmohq/redux-persist": "^6.1.0",
     "@plasmohq/storage": "^1.9.0",
     "@reduxjs/toolkit": "^2.0.1",
