--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "pnpm": {
     "overrides": {
-      "got@<11.8.5": ">=11.8.5"
+      "got@<11.8.5": ">=11.8.5",
+      "msgpackr@<1.10.1": ">=1.10.1"
     }
   }
 }
