--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "node": ">=20.11.0"
   },
   "packageManager": "pnpm@8.14.1",
+  "workspaces": [
+    "apps/*",
+    "packages/element-operations",
+    "packages/config/*"
+  ],
   "scripts": {
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
