--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "globalDependencies": ["**/.env", "tsconfig.json"],
+  "globalDotEnv": [".env"],
   "pipeline": {
     "db:generate": {
       "inputs": ["prisma/schema.prisma"],
@@ -11,10 +12,12 @@
       "cache": false
     },
     "dev": {
+      "dotEnv": [".env"],
       "persistent": true,
       "cache": false
     },
     "build": {
+      "dotEnv": [".env"],
       "dependsOn": ["^build", "^db:generate"],
       "outputs": [".next/**", ".expo/**"]
     },
@@ -37,18 +40,13 @@
   },
   "globalEnv": [
     "CI",
-    "DATABASE_URL",
-    "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET",
-    "EXPO_ROUTER_APP_ROOT",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
     "VERCEL",
     "VERCEL_URL",
     "DATABASE_URL",
     "DIRECT_URL",
-    "ENV_PASSWORD"
+    "ENV_PASSWORD",
+    "SENTRY_AUTH_TOKEN"
   ]
 }
