added tailwind and started work on prettier

--- a/my-turborepo/package.json
+++ b/my-turborepo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-turborepo",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -10,8 +11,9 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "prettier": "^3.1.1",
-    "turbo": "latest"
+    "prettier": "^3.2.4",
+    "turbo": "latest",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   },
   "engines": {
     "node": ">=18"
