tailwind now working

--- a/my-turborepo/packages/ui/tsconfig.json
+++ b/my-turborepo/packages/ui/tsconfig.json
@@ -7,6 +7,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["./*"],
+  "include": ["src/**/*", "src/*"],
   "exclude": ["node_modules", "dist", "turbo"]
 }
