--- a/my-turborepo/package.json
+++ b/my-turborepo/package.json
@@ -1,18 +1,16 @@
 {
+  "name": "my-turborepo",
   "private": true,
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "type-check": "turbo type-check",
-    "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.10",
+    "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "prettier": "^3.1.1",
     "turbo": "latest"
   },
   "engines": {
